
2020-01-02  Ron Norman <rjn@inglenet.com>

	* common.c: 	Removed warning about COB_DEBUG_LOG

2020-01-02  Ron Norman <rjn@inglenet.com>

	* common.h: 	Add COB_LAST_COMMIT and COB_LAST_ROLLBACK
	* fileio.c: 	Add trace code for COMMIT/ROLLBACK

2020-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* fextfh.c (copy_fcd_to_file) [_WIN32]: fix file_features for ORG_LINE_SEQ
	* fextfh.c (update_fcd_to_file): removed special handling of ORG_LINE_SEQ
	  as already done in copy_fcd_to_file

2020-01-01  Ron Norman <rjn@inglenet.com>

	* fileio.c: removed wrong setting of io_routine
	* fileio.h: Updates for ODBC interface
	* sysdefines.h: Add SQL Date structure
	* fodbc.c,fsqlxfd.c: Preliminary checkin of ODBC interface
				ODBC is not ready for production yet
				OCI will be developed/tested next based on ODBC

2019-12-27  Ron Norman <rjn@inglenet.com>

	* common.h: Added cob_file.curkey to record recent file index 
	* fileio.c: cob_read_next will check for records returned with
	            a key that has all SUPPRESS character and skip the
				record. This will handle old VBISAM, ODBC & OCI
				which do not support key suppression

2019-12-16  Ron Norman <rjn@inglenet.com>

	* fisam.c: Adjusted for correct use of snprintf

2019-12-11  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (BUTTON3_DOUBLE_CLICKED): fix value for BUTTON3_DOUBLE_CLICKED
	* screenio.c (field_accept): pass mouse position on KEY_MOUSE
	* screenio.c (cob_display_formatted_text): fix early return for broken data
	* common.c (set_config_val): pass COB_MOUSE_INTERVAL changes to screenio.c

2019-11-30  Ron Norman <rjn@inglenet.com>

	* common.c: Have cobcrun --info display of ODBC or OCI are possible
	* common.h: Flags added for created of eXternal file Description

2019-11-21  Ron Norman <rjn@inglenet.com>

	* fbdb.c: Change to ignore sequence of keys when writing
			to an output SEQUENTIAL INDEXED file that was
			runtime changed to file type of INDEXED

2019-11-20  Ron Norman <rjn@inglenet.com>
