@@ -1,4 +1,8 @@
 
+2020-01-03  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.c: bump copyright year
+
 2020-01-02  Ron Norman <rjn@inglenet.com>
 
 	* common.c: 	Removed warning about COB_DEBUG_LOG
@@ -4411,7 +4415,7 @@
 	  (cob_init_call): Initialize 'dynamic_reloading'.
 
 
-Copyright 2002-2019 Free Software Foundation, Inc.
+Copyright 2002-2020 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
